<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>

        <variable name="user" type="com.ahmedbenfadhel.githubdashboard.data.remote.model.User"/>
        <variable name="isLoading" type="Boolean"/>
    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <SearchView
                android:id="@+id/searchView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:queryHint="@string/search_hint"
                android:imeOptions="actionSearch"
                android:background="@android:color/transparent"/>

        <TextView
                android:id="@+id/loading_projects"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/loading_projects"
                android:textAlignment="center"
                app:visibleGone="@{isLoading}"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:visibleGone="@{!isLoading}">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <ImageView
                        android:id="@+id/useravatar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@null"
                        android:src="@{user.avatar_url}"/>

                <TextView
                        android:id="@+id/username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{user.name}"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/project_list"
                    android:contentDescription="@string/project_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

        </LinearLayout>

    </LinearLayout>
</layout>